@@ -2,6 +2,7 @@ Changes in 3.1.7
 ================
 * UPD: Spotlight: enhance behaviour for long running queries, client
        will now show "progress wheel" while waiting for first results.
+* FIX: netatalk: fix a crash on Solaris when registering with mDNS
 
 Changes in 3.1.6
 ================
